Changed the font color to light blue, added a button for future projects, changed font to Monaco, changed background color.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <h1>This is the first project of my portfolio.</h1>
-
+    <h1><center>Welcome to the coding portfolio of me, Aidan Varghese aka Adotcodes.</center></h1>
+<button>My Projects</button>
 </body>
 </html>
